# SandEngine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  debug_test.rs  index.html  script.js  test_debug.rs  test_websocket.html
archive/: constants.rs  lib.rs  main.rs  material.rs  simulation.rs  ui_components.rs
examples/: simple_engine.rs  structures_and_solids.rs
falling_sand/: Cargo.toml
falling_sand/src/: chunk.rs  main.rs  material.rs  optimization.rs  simulation.rs  world.rs
frontend/: index.html  script.js  style.css
frontend/js/: app.js  brush.js  canvas.js  materials.js  structures.js  ui.js  websocket.js
reference/: style.css
sand_game/: Cargo.toml  README.md
sand_game/src/: main.rs
sand_simulation_engine/: Cargo.toml
sand_simulation_engine/sand_game/: Cargo.toml
sand_simulation_engine/src/: grid.rs  lib.rs  material.rs  particle.rs  simulation_engine.rs
simple_sand/: Cargo.toml
simple_sand/src/: main.rs
src/: chunk.rs  constants.rs  ecs.rs  engine.rs  engine_v2.rs  lib.rs  main.rs  material.rs  material_converter.rs  material_properties.rs  materials.rs  particle.rs  physics.rs  reactions.rs  rigidbody.rs  save_load.rs  simulation.rs  spatial.rs  structures.rs  temperature.rs  temprature.rs  text_renderer.rs  tile_entity.rs  ui.rs  ui_components.rs  ui_helper.rs  world_generation.rs
src/engine/: constants.rs  material.rs  mod.rs  simulation.rs
src/game/: constants.rs  material_renderer.rs  mod.rs  text_renderer.rs  ui.rs  ui_components.rs
src/ui/: components.rs  mod.rs  text_renderer.rs  ui_impl.rs
