# Cargo.toml
[package]
name = "sand_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sand_engine"
path = "src/lib.rs"

[[bin]]
name = "sand_simulation"
path = "src/main.rs"

[dependencies]
pixels = "0.13.0"
winit = "0.28.6"
rand = "0.8.5"
fontdue = "0.7.3"