[package]
name = "sand_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
futures-util = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
# Physics engine for rigid bodies
rapier2d = "0.17"
nalgebra = "0.32"
# Performance optimizations
ahash = "0.8"
smallvec = "1.11"
# World generation
noise = "0.8"
rand_chacha = "0.3"
# Save/Load system
bincode = "1.3"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Native rendering dependencies (optional, for native client)
# pixels = "0.13"
# winit = "0.29"

[lib]
name = "sand_engine"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "physics_server"
path = "src/bin/physics_server.rs"

# [[bin]]
# name = "native"
# path = "src/bin/native.rs"
# NOTE: Disabled because pixels and winit dependencies are commented out

[[example]]
name = "simple_engine"
path = "examples/simple_engine.rs"

[[example]]
name = "structures_and_solids"
path = "examples/structures_and_solids.rs"