[package]
name = "sand_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sand_simulation_engine = { path = "../sand_simulation_engine" } # This path is relative to sand_game/Cargo.toml
pixels = "0.13" 
winit = "0.29"  
rand = "0.8"
env_logger = "0.10"
log = "0.4"
